--- a/emacs/config.org
+++ b/emacs/config.org
@@ -3,61 +3,61 @@
 ** Global variables to set
 #+name: el-global-variables
 #+begin_src emacs-lisp
-  (setq
-   desktop-restore-forces-onscreen nil ;; fixes an error occurring when using restoring `desktop'
+(setq
+ desktop-restore-forces-onscreen nil ;; fixes an error occurring when using restoring `desktop'
 
-   inhibit-startup-screen t
-   inhibit-splash-screen t
-   create-lockfiles nil
-   column-number-mode t
-   scroll-error-top-bottom t
-   show-paren-delay 0.5
-   use-package-always-ensure t
-   sentence-end-double-space nil 
-   global-prettify-symbols-mode t
-   default-tab-width 4
+ inhibit-startup-screen t
+ inhibit-splash-screen t
+ create-lockfiles nil
+ column-number-mode t
+ scroll-error-top-bottom t
+ show-paren-delay 0.5
+ use-package-always-ensure t
+ sentence-end-double-space nil 
+ global-prettify-symbols-mode t
+ default-tab-width 4
 
-   system-time-locale "C" ;; ensures that week-days follows English convention, e.g. Thu and Wed
+ system-time-locale "C" ;; ensures that week-days follows English convention, e.g. Thu and Wed
 
-   org-adapt-indentation nil  ;; don't indent text in a section to align with section-level
-   org-export-allow-bind-keywords t  ;; allows us to set variables in setup-files for project
-   org-preview-latex-image-directory "~/.ltximg/"  ;; this '/' at the end is VERY important..
+ org-adapt-indentation nil  ;; don't indent text in a section to align with section-level
+ org-export-allow-bind-keywords t  ;; allows us to set variables in setup-files for project
+ org-preview-latex-image-directory "~/.ltximg/"  ;; this '/' at the end is VERY important..
 
-   org-edit-src-content-indentation 0
-   org-babel-inline-result-wrap "%s"
-   org-emphasis-alist '(("*" bold)
-			("/" italic)
-			("_" default)
-			("=" org-verbatim verbatim)
-			("~" org-code verbatim)
-			("+"
-			 (:strike-through t)))
+ org-edit-src-content-indentation 0
+ org-babel-inline-result-wrap "%s"
+ org-emphasis-alist '(("*" bold)
+		      ("/" italic)
+		      ("_" default)
+		      ("=" org-verbatim verbatim)
+		      ("~" org-code verbatim)
+		      ("+"
+		       (:strike-through t)))
 
-   bibtex-completion-pdf-field "file"
+ bibtex-completion-pdf-field "file"
 
-   ;; TeX stuff
-   TeX-source-correlate-start-server t  ;; clicking in document takes you to source
+ ;; TeX stuff
+ TeX-source-correlate-start-server t  ;; clicking in document takes you to source
 
-   ;; set the backup folder to be the temp-folder
-   backup-directory-alist `((".*" . ,temporary-file-directory))
-   auto-save-file-name-transforms `((".*" ,temporary-file-directory t))
+ ;; set the backup folder to be the temp-folder
+ backup-directory-alist `((".*" . ,temporary-file-directory))
+ auto-save-file-name-transforms `((".*" ,temporary-file-directory t))
 
-   ;; omnisharp-server-executable-path "/home/tor/omnisharp-server/Omnisharp/bin/Debug/OmniSharp.exe"
+ ;; omnisharp-server-executable-path "/home/tor/omnisharp-server/Omnisharp/bin/Debug/OmniSharp.exe"
 
-   yas-triggers-in-field t; Enable nested triggering of snippets
+ yas-triggers-in-field t; Enable nested triggering of snippets
 
-   ;; slime
-   inferior-lisp-program "/usr/local/bin/sbcl"
-   slime-lisp-implementations '((sbcl ("sbcl")))
-   ;; lisp-indent-function 'common-lisp-indent-function
-   ;; slime-complete-symbol-function 'slime-fuzzy-complete-symbol
+ ;; slime
+ inferior-lisp-program "/usr/local/bin/sbcl"
+ slime-lisp-implementations '((sbcl ("sbcl")))
+ ;; lisp-indent-function 'common-lisp-indent-function
+ ;; slime-complete-symbol-function 'slime-fuzzy-complete-symbol
 
-   safe-local-variable-values '((visual-line-mode . 1)
-				(visual-line-mode . t)
-				(org-export-with-toc)
-				(org-after-todo-state-change-hook . tor/reading-list-done-hook)
-				(org-after-todo-state-change-hook . tor/impl-list-done-hook))
-   )
+ safe-local-variable-values '((visual-line-mode . 1)
+			      (visual-line-mode . t)
+			      (org-export-with-toc)
+			      (org-after-todo-state-change-hook . tor/reading-list-done-hook)
+			      (org-after-todo-state-change-hook . tor/impl-list-done-hook))
+ )
 #+end_src
 
 ** Util
@@ -1914,53 +1914,19 @@ Return output file name."
      (output-dvi "xdvi")
      (output-pdf "PDF Tools")
      (output-html "xdg-open"))))
- '(ansi-color-names-vector
-   ["#32302F" "#FB4934" "#B8BB26" "#FABD2F" "#83A598" "#D3869B" "#17CCD5" "#EBDBB2"])
  '(bibtex-completion-pdf-field "file")
  '(blink-cursor-mode nil)
  '(bmkp-last-as-first-bookmark-file "~/.emacs.d/bookmarks")
  '(compilation-message-face (quote default))
- '(cua-global-mark-cursor-color "#2aa198")
- '(cua-normal-cursor-color "#657b83")
- '(cua-overwrite-cursor-color "#b58900")
- '(cua-read-only-cursor-color "#859900")
  '(custom-enabled-themes (quote (solarized-dark)))
  '(custom-safe-themes
    (quote
     ("a27c00821ccfd5a78b01e4f35dc056706dd9ede09a8b90c6955ae6a390eb1c1e" "c74e83f8aa4c78a121b52146eadb792c9facc5b1f02c917e3dbb454fca931223" "2809bcb77ad21312897b541134981282dc455ccd7c14d74cc333b6e549b824f3" "13a8eaddb003fd0d561096e11e1a91b029d3c9d64554f8e897b2513dbf14b277" "830877f4aab227556548dc0a28bf395d0abe0e3a0ab95455731c9ea5ab5fe4e1" "7f1d414afda803f3244c6fb4c2c64bea44dac040ed3731ec9d75275b9e831fe5" "669e02142a56f63861288cc585bee81643ded48a19e36bfdf02b66d745bcc626" "a8245b7cc985a0610d71f9852e9f2767ad1b852c2bdea6f4aadc12cce9c4d6d0" "d91ef4e714f05fff2070da7ca452980999f5361209e679ee988e3c432df24347" "0598c6a29e13e7112cfbc2f523e31927ab7dce56ebb2016b567e1eff6dc1fd4f" "ec5f761d75345d1cf96d744c50cf7c928959f075acf3f2631742d5c9fe2153ad" "59171e7f5270c0f8c28721bb96ae56d35f38a0d86da35eab4001aebbd99271a8" "3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default)))
  '(default-text-scale-mode t nil (default-text-scale))
  '(elpy-rpc-python-command "python3")
- '(fci-rule-color "#eee8d5")
- '(highlight-changes-colors (quote ("#d33682" "#6c71c4")))
- '(highlight-symbol-colors
-   (--map
-    (solarized-color-blend it "#fdf6e3" 0.25)
-    (quote
-     ("#b58900" "#2aa198" "#dc322f" "#6c71c4" "#859900" "#cb4b16" "#268bd2"))))
- '(highlight-symbol-foreground-color "#586e75")
- '(highlight-tail-colors
-   (quote
-    (("#eee8d5" . 0)
-     ("#B4C342" . 20)
-     ("#69CABF" . 30)
-     ("#69B7F0" . 50)
-     ("#DEB542" . 60)
-     ("#F2804F" . 70)
-     ("#F771AC" . 85)
-     ("#eee8d5" . 100))))
- '(hl-bg-colors
-   (quote
-    ("#DEB542" "#F2804F" "#FF6E64" "#F771AC" "#9EA0E5" "#69B7F0" "#69CABF" "#B4C342")))
- '(hl-fg-colors
-   (quote
-    ("#fdf6e3" "#fdf6e3" "#fdf6e3" "#fdf6e3" "#fdf6e3" "#fdf6e3" "#fdf6e3" "#fdf6e3")))
- '(hl-paren-colors (quote ("#2aa198" "#b58900" "#268bd2" "#6c71c4" "#859900")))
  '(julia-max-block-lookback 100000)
  '(magit-diff-use-overlays nil)
  '(markdown-command "/usr/bin/pandoc")
- '(nrepl-message-colors
-   (quote
-    ("#dc322f" "#cb4b16" "#b58900" "#546E00" "#B4C342" "#00629D" "#2aa198" "#d33682" "#6c71c4")))
  '(org-agenda-files
    (quote
     ("~/Dropbox/org/gtd.org" "~/Dropbox/org/school.org" "~/Dropbox/org/reading.org" "~/Dropbox/org/implement.org")))
@@ -2043,7 +2009,7 @@ Return output file name."
              :latex-compiler
              ("latex -interaction nonstopmode -output-directory %o %f")
              :image-converter
-             ("dvipng -fg %F -bg %B -D %D -T tight -o %O %f"))
+             ("dvipng -D %D -T tight -o %O %f"))
      (dvisvgm :programs
               ("latex" "dvisvgm")
               :description "dvi > svg" :message "you need to install the programs: latex and dvisvgm." :use-xcolor t :image-input-type "dvi" :image-output-type "svg" :image-size-adjust
@@ -2088,48 +2054,20 @@ Return output file name."
    (quote
     (solarized-theme ox-jekyll-md stan-mode pdf-tools helm-bibtex gnuplot org-tree-slide gnu-elpa-keyring-update annotate jupyter lv sudo-edit ox-gfm graphviz-dot-mode ox-reveal projectile-ripgrep sublimity gif-screencast ox-rst interleave xah-lookup org-brain web-mode use-package string-inflection spotify spaceline smartparens smart-mode-line racer ox-hugo ox-clip owdriver org-ref org-clock-convenience org-bullets ob-sql-mode ob-rust ob-http ob-go mustache multiple-cursors matlab-mode irony-eldoc iedit helm-spotify helm-projectile helm-org-rifle helm-emmet helm-descbinds groovy-mode fic-mode exec-path-from-shell ess edit-server edit-indirect dirtree darktooth-theme csharp-mode cql-mode company-tern company-racer company-quickhelp company-jedi company-irony-c-headers company-irony company-go company-auctex centered-cursor-mode arduino-mode ace-window ace-jump-mode)))
  '(python-shell-interpreter "python3")
- '(scroll-bar-mode nil)
- '(term-default-bg-color "#fdf6e3")
- '(term-default-fg-color "#657b83")
- '(tool-bar-mode nil)
  '(vc-annotate-background nil)
  '(vc-annotate-background-mode nil)
- '(vc-annotate-color-map
-   (quote
-    ((20 . "#dc322f")
-     (40 . "#e52a72950000")
-     (60 . "#e52aabe00000")
-     (80 . "#b58900")
-     (100 . "#e52ae52a0000")
-     (120 . "#e52ae52a0000")
-     (140 . "#e52ae52a0000")
-     (160 . "#e52ae52a0000")
-     (180 . "#859900")
-     (200 . "#98c7e52a4c63")
-     (220 . "#7295e52a7295")
-     (240 . "#4c63e52a98c7")
-     (260 . "#2631e52abef8")
-     (280 . "#2aa198")
-     (300 . "#0000e52ae52a")
-     (320 . "#0000e52ae52a")
-     (340 . "#0000e52ae52a")
-     (360 . "#268bd2"))))
  '(vc-annotate-very-old-color nil)
  '(warning-suppress-types (quote ((yasnippet backquote-change) (:warning))))
- '(xterm-color-names
-   ["#eee8d5" "#dc322f" "#859900" "#b58900" "#268bd2" "#d33682" "#2aa198" "#073642"])
- '(xterm-color-names-bright
-   ["#fdf6e3" "#cb4b16" "#93a1a1" "#839496" "#657b83" "#6c71c4" "#586e75" "#002b36"])
  '(yas-indent-line (quote fixed)))
 (custom-set-faces
  ;; custom-set-faces was added by Custom.
  ;; If you edit it by hand, you could mess it up, so be careful.
  ;; Your init file should contain only one such instance.
  ;; If there is more than one, they won't work right.
- '(default ((t (:inherit nil :stipple nil :background "#002b36" :foreground "#839496" :inverse-video nil :box nil :strike-through nil :overline nil :underline nil :slant normal :weight normal :height 90 :width normal :foundry "PfEd" :family "DejaVu Sans Mono"))))
+ '(default ((t (:inherit nil :stipple nil :inverse-video nil :box nil :strike-through nil :overline nil :underline nil :slant normal :weight normal :height 90 :width normal :foundry "PfEd" :family "DejaVu Sans Mono"))))
  '(fic-author-face ((t (:foreground "dark violet" :underline t))))
  '(fic-face ((t (:foreground "magenta" :weight bold))))
- '(org-block ((t (:background "#002d39"))))
+ ;; '(org-block ((t (:background "#002d39")))) ;; HACK: this is in case we want to change the background-color; though should probably make a custom-theme instead
  '(org-block-begin-line ((t (:inherit org-meta-line :underline nil))))
  '(org-block-end-line ((t (:inherit org-meta-line :overline nil :slant normal :weight bold))))
  '(org-document-title ((t (:inherit default :weight bold :foreground "#ABB2BF" :family "Sans Serif" :height 1.5 :underline nil))))
