--- a/emacs/config.org
+++ b/emacs/config.org
@@ -1231,7 +1231,7 @@ Return output file name."
 	     "Todo"     ;; title
 	     entry      ;; type of template
 	     (file+headline "~/Dropbox/org/gtd.org" "Tasks")  ;; what and where to add
-	     "* TODO %^{Brief Description} %^g\n  Entered on %U\n  %?\n  %i\n  %a"  ;; template
+	     "* TODO %^{Brief Description} %^g\nEntered on %U\n%?\n%i\n%a"  ;; template
 	     :empty-lines 1 ;; property
 	     )
 
@@ -1614,6 +1614,24 @@ Return output file name."
           (bind-key "C-c [" 'org-ref-insert-ref-link)
           (bind-key "C-c ]" 'org-ref-helm-insert-cite-link)))
 #+end_src
+*** =org-download=
+=org-download= allows you to do neat stuff like drag-and-drop images into an org-buffer to insert the image there!
+
+#+name: el-pkg-org-download
+#+begin_src emacs-lisp 
+(use-package org-download)
+#+end_src
+
+*** =org-pdftools=
+This allows you to reference specific text and stuch in a PDF-document!
+
+#+name: el-pkg-org-pdftools
+#+begin_src emacs-lisp 
+(use-package org-pdftools
+  :after org
+  :config (org-pdftools-setup-link))
+#+end_src
+
 *** =org-noter= & =org-noter-pdftools=
 #+name: el-pkg-org-noter
 #+begin_src emacs-lisp 
@@ -1891,6 +1909,10 @@ Return output file name."
 <<el-org-mode>>
 
 <<el-pkg-org-noter>>
+
+<<el-pkg-org-download>>
+
+<<el-pkg-org-pdftools>>
 
 ;; END org-mode
 
